---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "type fowo : forward var _ : fowo"
---
"fowo"@"src/main.t:5..9" [Type]: alias[DefId(PackageId(3072), LocalDefId(0))] of forward
"_"@"src/main.t:24..25" [ConstVar(Var, No)]: <error>
"<root>"@"<unknown>:0..0" [Module(No)]: <error>

error at src/main.t:28..32: `fowo` has not been resolved at this point
| error for src/main.t:28..32: `fowo` is required to be resolved at this point
